--- a/fx-password-xml/src/main/resources/login.fxml
+++ b/fx-password-xml/src/main/resources/login.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" prefHeight="281.0" prefWidth="369.0"
-      xmlns="http://javafx.com/javafx/8.0.171" fx:controller="me.ryan_s.login.LoginController">
+      xmlns="http://javafx.com/javafx/8.0.171" fx:controller="me.ryan_s.LoginController">
     <children>
-        <GridPane prefHeight="231.0" prefWidth="369.0">
+        <GridPane prefHeight="231.0" prefWidth="369.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -45,8 +45,9 @@
                         <Insets top="5.0"/>
                     </GridPane.margin>
                 </PasswordField>
-                <Button fx:id="loginBtn" mnemonicParsing="false" text="Login" GridPane.columnIndex="1"
-                        GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                <Button fx:id="loginBtn" mnemonicParsing="false" styleClass="btn-success" text="Login"
+                        GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4"
+                        GridPane.valignment="TOP">
                     <GridPane.margin>
                         <Insets/>
                     </GridPane.margin>
