--- a/fx-password-xml/src/main/resources/main.fxml
+++ b/fx-password-xml/src/main/resources/main.fxml
@@ -1,17 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-          minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171">
-    <columnConstraints>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+      minWidth="-Infinity" prefHeight="408.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/8.0.171"
+      fx:controller="me.ryan_s.Controller">
+  <children>
+    <MenuBar prefWidth="185.0">
+      <menus>
+        <Menu mnemonicParsing="false" text="File">
+          <items>
+            <MenuItem mnemonicParsing="false" text="Refresh from File"/>
+            <MenuItem mnemonicParsing="false" text="Logout"/>
+          </items>
+        </Menu>
+      </menus>
+    </MenuBar>
+    <GridPane prefWidth="775.0" VBox.vgrow="ALWAYS">
+      <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-    </rowConstraints>
-</GridPane>
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+      </rowConstraints>
+      <children>
+        <Label prefWidth="194.0" text="SCHS Library" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER">
+          <font>
+            <Font name="Copperplate Gothic Bold" size="25.0"/>
+          </font>
+        </Label>
+        <TextField fx:id="familyNameField" promptText="Family Name" GridPane.rowIndex="1">
+          <GridPane.margin>
+            <Insets left="20.0" right="20.0"/>
+          </GridPane.margin>
+        </TextField>
+        <TextField fx:id="nameField" promptText="First Name" GridPane.rowIndex="2">
+          <GridPane.margin>
+            <Insets left="20.0" right="20.0"/>
+          </GridPane.margin>
+        </TextField>
+        <ComboBox fx:id="houseBox" prefWidth="150.0" promptText="House" styleClass="split-menu-btn-default"
+                  GridPane.rowIndex="3">
+          <GridPane.margin>
+            <Insets left="20.0"/>
+          </GridPane.margin>
+        </ComboBox>
+        <Button mnemonicParsing="false" styleClass="btn-info" text="Save" GridPane.halignment="CENTER"
+                GridPane.rowIndex="5">
+          <GridPane.margin>
+            <Insets top="20.0"/>
+          </GridPane.margin>
+        </Button>
+        <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1"
+                   GridPane.columnSpan="2147483647" GridPane.rowIndex="1" GridPane.rowSpan="2147483647">
+          <columns>
+            <TableColumn fx:id="idCol" prefWidth="75.0" text="ID"/>
+            <TableColumn fx:id="nameCol" prefWidth="75.0" text="First Name"/>
+            <TableColumn fx:id="lastNameCol" prefWidth="75.0" text="Last Name"/>
+            <TableColumn fx:id="houseCol" prefWidth="75.0" text="House"/>
+            <TableColumn fx:id="examCol" prefWidth="75.0" text="Exam Status"/>
+          </columns>
+          <GridPane.margin>
+            <Insets bottom="20.0" right="20.0"/>
+          </GridPane.margin>
+          <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+          </columnResizePolicy>
+        </TableView>
+        <ComboBox prefWidth="150.0" promptText="Exam Status" styleClass="split-menu-btn-default" GridPane.rowIndex="4">
+          <GridPane.margin>
+            <Insets left="20.0"/>
+          </GridPane.margin>
+        </ComboBox>
+      </children>
+    </GridPane>
+  </children>
+</VBox>
