--- a/fx-password-xml/src/main/resources/main.fxml
+++ b/fx-password-xml/src/main/resources/main.fxml
@@ -23,8 +23,8 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" text="Refresh from File"/>
-            <MenuItem mnemonicParsing="false" text="Logout"/>
+            <MenuItem mnemonicParsing="false" onAction="#onRefresh" text="Refresh from File"/>
+            <MenuItem mnemonicParsing="false" onAction="#onLogout" text="Logout"/>
           </items>
         </Menu>
       </menus>
@@ -65,8 +65,14 @@
             <Insets left="20.0"/>
           </GridPane.margin>
         </ComboBox>
-        <Button mnemonicParsing="false" styleClass="btn-info" text="Save" GridPane.halignment="CENTER"
-                GridPane.rowIndex="5">
+        <ComboBox fx:id="examBox" prefWidth="150.0" promptText="Exam Status" styleClass="split-menu-btn-default"
+                  GridPane.rowIndex="4">
+          <GridPane.margin>
+            <Insets left="20.0"/>
+          </GridPane.margin>
+        </ComboBox>
+        <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onSaveClick" onKeyPressed="#onSaveClick"
+                styleClass="btn-success" text="Save" GridPane.halignment="CENTER" GridPane.rowIndex="5">
           <GridPane.margin>
             <Insets top="20.0"/>
           </GridPane.margin>
@@ -87,11 +93,6 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
           </columnResizePolicy>
         </TableView>
-        <ComboBox prefWidth="150.0" promptText="Exam Status" styleClass="split-menu-btn-default" GridPane.rowIndex="4">
-          <GridPane.margin>
-            <Insets left="20.0"/>
-          </GridPane.margin>
-        </ComboBox>
       </children>
     </GridPane>
   </children>
